--- a/08.书信函件类/坐牢家爸爸给女儿的八十封信.md
+++ b/08.书信函件类/坐牢家爸爸给女儿的八十封信.md
@@ -481,23 +481,20 @@ Do not kill the goose that lays the golden eggs.
 
 上次跟你说的那种鹅是家鹅，有关鹅的种类的英文和中文，你该注意的是：
 
-goose——家鹅又叫鹅
+goose —— 家鹅又叫鹅
+wild goose —— 野鹅又叫雁，“燕”是另外一种，英文叫 ​swallow，别跟“雁”弄混了
+swan —— 天鹅也叫鹄
+wild swan —— 野天鹅又叫鸿也叫鸿鹄
 
-wildgoose——野鹅又叫雁，“燕”是另外一种，英文叫swallow，别跟“雁”弄混了
-
-swan——天鹅也叫鹄
-
-wildswan——野天鹅又叫鸿也叫鸿鹄
-
-野鹅、天鹅都会飞，飞起来有秩序，成人字形，也就是英文的V字形。这样两行，叫做“雁行”。中文“雁行折翼”的意思是兄弟死了（deathofabrother）。
+野鹅、天鹅都会飞，飞起来有秩序，成人字形，也就是英文的 V 字形。这样两行，叫做“雁行”。中文“雁行折翼”的意思是兄弟死了（death of a brother）。
 
 古代人用雁和鸽子传信，把信折成小条，捆在爪上，这叫“雁足传书”。如果没有消息、没有信，就叫“雁杳鱼沉”。形容女人漂亮，叫“沉鱼落雁”（因为太漂亮，鱼和雁都觉得自己丑，不好意思看她）。其实这种形容是很笨的，原子弹丢下来，也可使鱼沉雁落啊！
 
-英文中wild-goosechase（追野鹅）是白费劲的意思。
+英文中 ​wild-goose chase（追野鹅）是白费劲的意思。
 
-中国古时候人写诗，常常提到雁。有一首李颀写的《古从军行》——“白日登山望烽火，黄昏饮马傍交河。行人刁斗风沙暗，公主琵琶幽怨多。野营万里无城郭，雨雪纷纷连大漠。胡雁哀鸣夜夜飞，胡儿眼泪双双落。闻道玉门犹被遮，应将性命逐轻车。年年战骨埋荒外，空见葡萄入汉家。”请姥姥讲给你听。这首诗收在《唐诗三百首》，这是一本有名的诗选，一共选了310首诗，为什么310首诗叫“三百首”呢？因为更古的一本诗选，叫《诗经》，有三百篇，但实际是311个题目，为了跟《诗经》学，就来了唐诗310首，少一首，是表示客气，你看中国人多妙啊！
+中国古时候人写诗，常常提到雁。有一首李颀写的《古从军行》——“白日登山望烽火，黄昏饮马傍交河。行人刁斗风沙暗，公主琵琶幽怨多。野营万里无城郭，雨雪纷纷连大漠。胡雁哀鸣夜夜飞，胡儿眼泪双双落。闻道玉门犹被遮，应将性命逐轻车。年年战骨埋荒外，空见葡萄入汉家。”请姥姥讲给你听。这首诗收在《唐诗三百首》，这是一本有名的诗选，一共选了 310 首诗，为什么 310 首诗叫“三百首”呢？因为更古的一本诗选，叫《诗经》，有三百篇，但实际是 311 个题目，为了跟《诗经》学，就来了唐诗 310 首，少一首，是表示客气，你看中国人多妙啊！
 
-爸爸1974年3月1日
+爸爸 1974 年 3 月 1 日
 
 ## 十七、他所有的鹅都是天鹅
 
