--- a/08.书信函件类/坐牢家爸爸给女儿的八十封信.md
+++ b/08.书信函件类/坐牢家爸爸给女儿的八十封信.md
@@ -500,21 +500,21 @@ wild swan —— 野天鹅又叫鸿也叫鸿鹄
 
 亲爱的小文：
 
-英文中说一个人吹牛，就说Allhisgeeseareswans.（他所有的鹅都是天鹅）。天鹅比鹅珍贵，珍贵得人人都想吃，包括瘌蛤蟆。请姥姥给你讲什么叫“瘌蛤蟆想吃天鹅肉”（atoaddreamingofeatingtheswan'smeat）。爸爸有一个朋友，在台北衡阳街口卖芝麻饼，他追一个阔家小姐，阔家小姐的妈妈把他告到警察局，警察骂他“想吃天鹅肉”，他后来把卖的饼改名“天鹅饼”。
+英文中说一个人吹牛，就说 ​All his geese are swans.​（他所有的鹅都是天鹅）。天鹅比鹅珍贵，珍贵得人人都想吃，包括癞蛤蟆。请姥姥给你讲什么叫“癞蛤蟆想吃天鹅肉”（a toad dreaming of eating the swan's meat）。爸爸有一个朋友，在台北衡阳街口卖芝麻饼，他追一个阔家小姐，阔家小姐的妈妈把他告到警察局，警察骂他“想吃天鹅肉”，他后来把卖的饼改名“天鹅饼”。
 
-因为天鹅优雅美丽，所以很多诗、歌都写它。德国名作曲家瓦格纳（RichardWagner）作过名曲Lohengrin（这个h字不发音），描写天鹅，四姑父四姑会有这唱片。写《丑小鸭》（TheUglyDucking）的丹麦童话家安徒生（HansChristianAndersen），也写过《野天鹅》（TheWildSwans），你看安徒生童话的时候，可以特别注意这一篇。另外俄国作曲家柴可夫斯基（PeterTchaikovsky）也作过舞剧《天鹅湖》（TheSwanLake）。
+因为天鹅优雅美丽，所以很多诗、歌都写它。德国名作曲家瓦格纳（Richard Wagner）作过名曲 ​Lohengrin（这个 h 字不发音），描写天鹅，四姑父四姑会有这唱片。写《丑小鸭》（The Ugly Ducking）的丹麦童话家安徒生（Hans Christian Andersen），也写过《野天鹅》（The Wild Swans），你看安徒生童话的时候，可以特别注意这一篇。另外俄国作曲家柴可夫斯基（Peter Tchaikovsky）也作过舞剧《天鹅湖》（The Swan Lake）。
 
-虽然说人像鹅一样笨（assillyasagoose），但却称赞人举止像天鹅一样闲雅（gracefulasaswan），闲雅也可以写做娴雅。
+虽然说人像鹅一样笨（as silly as a goose），但却称赞人举止像天鹅一样闲雅（graceful as a swan），闲雅也可以写做娴雅。
 
-游泳有一种跳水的姿势，就叫天鹅式（swandive），这是美国的叫法，英国则叫燕子式（swallowdive）。
+游泳有一种跳水的姿势，就叫天鹅式（swan dive），这是美国的叫法，英国则叫燕子式（swallow dive）。
 
-传说天鹅死前要唱歌，所以英文“天鹅之歌”（swansong）就转用来表示最后的行动或作品（诗、歌等等都算）。
+传说天鹅死前要唱歌，所以英文“天鹅之歌”（swan song）就转用来表示最后的行动或作品（诗、歌等等都算）。
 
-神话中有“天鹅少女”（swanmaiden），只要穿上一种“天鹅衫”（swanshift），就变成女天鹅，谁要检到这天鹅衫，这个少女就要听谁的话。
+神话中有“天鹅少女”（swan maiden），只要穿上一种“天鹅衫”（swan shift），就变成女天鹅，谁要捡到这天鹅衫，这个少女就要听谁的话。
 
-Swan是白的，但澳洲有一种黑天鹅（blackswan）。
+Swan 是白的，但澳洲有一种黑天鹅（black swan）。
 
-爸爸1974年2月9日
+爸爸 1974 年 2 月 9 日
 
 ## 十八、麻是麻烦，可是不会生胃病
 
