--- a/08.书信函件类/坐牢家爸爸给女儿的八十封信.md
+++ b/08.书信函件类/坐牢家爸爸给女儿的八十封信.md
@@ -520,35 +520,29 @@ Swan 是白的，但澳洲有一种黑天鹅（black swan）。
 
 亲爱的小文：
 
-记得爸爸去年8月5号给你的信上提到鹿的胃和牛一样，是“反刍”的吗？牛的胃有四部分，先把东西咽到第一、二部分，有空再吐出来重嚼。嚼好再到一、二、三、四部分。
+记得爸爸去年 8 月 5 号给你的信上提到鹿的胃和牛一样，是“反刍”的吗？牛的胃有四部分，先把东西咽到第一、二部分，有空再吐出来重嚼。嚼好再到一、二、三、四部分。
 
 你问它们是不是太麻烦了，它们会告诉你：“麻是麻须，可是不会生胃病。”
 
-一般叫牛做cattle
-
-公牛叫做bull可叫做爸爸牛
-
-警察也叫bull
-
+一般叫牛做 ​cattle
+公牛叫做 ​bull 可叫做爸爸牛
+警察也叫 ​bull
 向警察告密或告什么叫牛肉（beef）
-
-母牛叫做cow可叫做妈妈牛
-
-小母牛叫做heifer可叫做小姐牛
-
-小牛（不论公母）叫做calf可叫做娃娃牛
+母牛叫做 ​cow 可叫做妈妈牛
+小母牛叫做 ​heifer 可叫做小姐牛
+小牛（不论公母）叫做 ​calf 可叫做娃娃牛
 
 牛没有苍蝇拍，牛的尾巴就用来把苍蝇赶走。
 
-有的牛是肉牛（beef），有的牛是乳牛（dairy），有的两样都行，叫dual-purposecattle（两用牛）。
+有的牛是肉牛（beef），有的牛是乳牛（dairy），有的两样都行，叫 ​dual-purpose cattle（两用牛）。
 
-Buffalo是水牛，纽约州除纽约市外第一个大城就叫Buffalo，克利夫兰总统当选前三年曾做过市长。水牛的鼻子很灵。另外有一种美国水牛，叫bison，其实不算是真正水牛，只是一种野牛（水牛筋骨有十三对，bison有十四对）。
+Buffalo 是水牛，纽约州除纽约市外第一个大城就叫 ​Buffalo，克利夫兰总统当选前三年曾做过市长。水牛的鼻子很灵。另外有一种美国水牛，叫 ​bison，其实不算是真正水牛，只是一种野牛（水牛筋骨有十三对，bison 有十四对）。
 
-印度人认为牛神圣。不准杀牛吃肉。牛被惯得可以在马路上逛。有时候拦住计程车开不过去，计程车司机只好下车，走到牛身边，趁人看不到，揍它一拳。
+印度人认为牛神圣，不准杀牛吃肉。牛被惯得可以在马路上逛。有时候拦住计程车开不过去，计程车司机只好下车，走到牛身边，趁人看不到，揍它一拳。
 
-昨天收到你1月30号的信，姥姥的手大概太累生病。以后改由你和姥姥每周轮流写信，就是每人两个星期写一封。本周要写信给八舅，不给姥姥写了。
+昨天收到你 1 月 30 号的信，姥姥的手大概太累生病。以后改由你和姥姥每周轮流写信，就是每人两个星期写一封。本周要写信给八舅，不给姥姥写了。
 
-爸爸1974年2月16日
+爸爸 1974 年 2 月 16 日
 
 请姥姥告诉我八舅给你们的汇款情形。
 
