--- a/08.书信函件类/坐牢家爸爸给女儿的八十封信.md
+++ b/08.书信函件类/坐牢家爸爸给女儿的八十封信.md
@@ -550,33 +550,28 @@ Buffalo 是水牛，纽约州除纽约市外第一个大城就叫 ​Buffalo，
 
 亲爱的小文：
 
-你有没有跟小朋友们玩jack的游戏？jack是一个好玩的字，很多英文字里头都有它。大写Jack是人名，英文有句成语AllworkandnoplaymakesJackadullboy（光用功，也不玩，杰克变成个笨小孩）。这句成语已经有三百多年的历史了。
+你有没有跟小朋友们玩 ​jack 的游戏？jack 是一个好玩的字，很多英文字里头都有它。大写 ​Jack 是人名，英文有句成语 ​All work and no play makes Jack a dull boy​（光用功，也不玩，杰克变成个笨小孩）。这句成语已经有三百多年的历史了。
 
-Jack指男的，Jill（或Gill）指女的。又有英文成语EveryJackhashisJill就是中文“物各有偶”的意思，破锅有烂灶、李大有张嫂。
+Jack 指男的，​Jill​（或 ​Gill）指女的。又有英文成语 ​Every Jack has his Jill 就是中文“物各有偶”的意思，破锅有烂灶、李大有张嫂。
 
-jack-of-all-trades是万能博士。万事通。
+jack-of-all-trades 是万能博士。万事通。
+jack-of-trades and master of none 是样样通样样松。无所不能一无所成。十艺九不精。
+jack-of-all-trades and master of many 是万能博士。样样都行。注意去年十、七信上爸爸跟你提到过的富兰克林，就是这样的人。
 
-jack-of-tradesandmasterofnone是样样通样样松。无所不能一无所成。十艺九不精。
+jack-in-the-box 盒子老头，一种玩具，盒一开就跳出个小人。
+jackleg lawyer 坏蛋律师。
+jackrabbit 长耳朵长腿兔，是一种大的野兔（hare），只在北美洲才有。
+Jack Sprat​（儿歌里面的）小矮人，很胖。但他的太太很瘦。
 
-jack-of-all-tradesandmasterofmany是万能博士。样样都行。注意去年十、七信上爸爸跟你提到过的富兰克林，就是这样的人。
+汽车换车胎时候用的“千斤顶”，也叫 ​jack、jackscrew。
 
-jack-in-the-box盒子老头，一种玩具，盒一开就跳出个小人。
-
-jackleglawyer坏蛋律师。
-
-jackrabbit长耳朵长腿兔，是一种大的野兔（hare），只在北美洲才有。
-
-JackSprat（儿歌里面的）小矮人，很胖。但他的太太很瘦。
-
-汽车换车胎时候用的“千斤顶”，也叫jack、jackscrew。
-
-jack-o'-lantern是南瓜灯。把南瓜挖成人脸，里头放蜡烛。万圣节（Halloween）的时候，你有没有看到？万圣节点灯笼，是因为爱尔兰传说有个人叫Jack的，因为太吝啬，上不了天堂；又因为寻魔鬼开心，下不了地狱，所以只好点个灯笼在地上逛，等待最后审判。
+jack-o'-lantern 是南瓜灯。把南瓜挖成人脸，里头放蜡烛。万圣节（Halloween）的时候，你有没有看到？万圣节点灯笼，是因为爱尔兰传说有个人叫 ​Jack 的，因为太吝啬，上不了天堂；又因为寻魔鬼开心，下不了地狱，所以只好点个灯笼在地上逛，等待最后审判。
 
 中国人有“上天无路，入地无门”的话，但没有这故事。
 
-爸爸1974年2月22日
+爸爸 1974 年 2 月 22 日
 
-南瓜叫pumpkin，尼克松总统二十四年前揭发的Hiss间谍案，证据就藏在南瓜里。
+南瓜叫 pumpkin，尼克松总统二十四年前揭发的 ​Hiss 间谍案，证据就藏在南瓜里。
 
 ## 二十、情人与天使
 
