--- a/08.书信函件类/坐牢家爸爸给女儿的八十封信.md
+++ b/08.书信函件类/坐牢家爸爸给女儿的八十封信.md
@@ -577,25 +577,22 @@ jack-o'-lantern 是南瓜灯。把南瓜挖成人脸，里头放蜡烛。万圣
 
 亲爱的小文：
 
-昨天收到你2月13的信和卡片。你有那么好的成绩——在短短几个月中就有那么好的成绩，爸爸很高兴。你现在正是赶功课的时候，所以不和别的小朋友一样，你必须比他们多花一些时间在功课上面，等到功课赶过他们，才好大玩特玩，你说对不对？
+昨天收到你 2 月 13 的信和卡片。你有那么好的成绩——在短短几个月中就有那么好的成绩，爸爸很高兴。你现在正是赶功课的时候，所以不和别的小朋友一样，你必须比他们多花一些时间在功课上面，等到功课赶过他们，才好大玩特玩，你说对不对？
 
-瓦伦丁节（Valentine'sDay）翻做“情人节”不算完全，该翻做“爱节”或“情爱节”。
+瓦伦丁节（Valentine's Day）翻做“情人节”不算完全，该翻做“爱节”或“情爱节”。
 
-圣瓦伦丁（St.Valentine）是一千七百年前的基督徒，有两个，都在2月14被罗马人砍掉脑袋。但这个节，跟他们却没什么关系。
+圣瓦伦丁（St. Valentine）是一千七百年前的基督徒，有两个，都在 2 月 14 被罗马人砍掉脑袋。但这个节，跟他们却没什么关系。
 
-跟Valentine这个字只差一个字母，有个字叫Valentino，就是半个世纪前鼎鼎大名的电影明星瓦伦蒂诺。他原是洗窗户的，后来变成了大情人（thegreatlover），31岁就死了，有好几千女影迷参加他的丧礼。姥姥那时候如在美国，一定也去参加，因为那时候姥姥才16岁。
+跟 ​Valentine 这个字只差一个字母，有个字叫 ​Valentino，就是半个世纪前鼎鼎大名的电影明星瓦伦蒂诺。他原是洗窗户的，后来变成了大情人（the great lover），31 岁就死了，有好几千女影迷参加他的丧礼。姥姥那时候如在美国，一定也去参加，因为那时候姥姥才 16 岁。
 
 瓦伦丁节卡片上有一颗心，心上又被箭射穿，你给爸爸的卡片上也这样画着，你知道为什么吗？在神话里，爱和美的女神叫维纳斯（Venus），她的小孩叫爱神丘比特（Cupid），手上有弓和箭，箭有金的银的，被他射上金箭就爱得快乐，被他射上银箭就爱得痛苦。丘比特不但射别人，也射自己，他爱上一个美得被维纳斯嫉妒的女人，闹得天翻地覆。
 
 图画上的丘比特有翅膀，有时画成个青年人，有时画成个胖娃娃，但图画中手里不拿弓箭的是天使，天使共分九级：
+第一级是 ​seraph​（六翼天使）；
+第二级是 ​cherub​（都是娃娃相）；
+第九级才是 ​angel​（多是少女相）。
 
-第一级是seraph（六翼天使）；
-
-第二级是cherub（都是娃娃相）；
-
-第九级才是angel（多是少女相）。
-
-爸爸1974年3月2日
+爸爸 1974 年 3 月 2 日
 
 ## 二一、看那熊相
 
