--- a/08.书信函件类/坐牢家爸爸给女儿的八十封信.md
+++ b/08.书信函件类/坐牢家爸爸给女儿的八十封信.md
@@ -598,46 +598,39 @@ jack-o'-lantern 是南瓜灯。把南瓜挖成人脸，里头放蜡烛。万圣
 
 亲爱的小文：
 
-你以后如果有机会到黄石公园（Yellowstone，在Wyoming州）或约塞米蒂公园（Yosemite，在California州）去，你可以看到有大黑熊（thecommonblackbear）跑出来，让你照相。但你别以为它是个好的模特儿（model），所有的熊都是急性子的和动不动就发脾气的（Allbearsareshort-temperedandgetangryquickly）。
+你以后如果有机会到黄石公园（Yellowstone，在 Wyoming 州）或约塞米蒂公园（Yosemite，在 California 州）去，你可以看到有大黑熊（the common black bear）跑出来，让你照相。但你别以为它是个好的模特儿（model），所有的熊都是急性子的和动不动就发脾气的（All bears are short-tempered and get angry quickly）。
 
 熊的眼睛小，也不大灵光，但鼻子很行。最喜欢吃甜的，常去搅蜂窝抢蜜吃，因为皮毛都厚，蜂螫它它也不怕。它又喜欢搅白蚁窝，这一点上爸爸最佩服它，爸爸对白蚁，可没熊那样有办法。
 
-熊老是独来独往，公熊（he-bear）和母熊（she-bear）在一块个把月就分开了。小熊（cub）由妈妈带。熊掌（bear'spaw）是中国古人的名菜，孟夫子说：“鱼我所欲也，熊掌亦我所欲也。”熊掌上有个肉疙瘩，叫熊丸（apillofbear'spaw），是给小熊咬着玩的。
+熊老是独来独往，公熊（he-bear）和母熊（she-bear）在一块个把月就分开了。小熊（cub）由妈妈带。熊掌（bear's paw）是中国古人的名菜，孟夫子说：“鱼我所欲也，熊掌亦我所欲也。”熊掌上有个肉疙瘩，叫熊丸（a pill of bear's paw），是给小熊咬着玩的。
 
 英雄虽然独来独往，但小偷也独来独往，熊是个小偷，喜欢偷人的东西吃。
-
 熊冬眠，可是天暖时，也爬起来溜达溜达（stroll），再睡。
-
 熊爬树，是专家。
 
-熊在森林里，美国森林防火，用了一个熊的图片，叫SmokytheBear。有一个很好玩的巧合，中文中用来形容大火就说“熊熊大火”（ablazingfire），“熊熊”是火光，很亮的火光。
+熊在森林里，美国森林防火，用了一个熊的图片，叫 ​Smoky the Bear。有一个很好玩的巧合，中文中用来形容大火就说“熊熊大火”（a blazing fire），“熊熊”是火光，很亮的火光。
 
-黑熊大概喜欢英文，所以胸前有黄白色的UV或Y字。
+黑熊大概喜欢英文，所以胸前有黄白色的 UV 或 Y 字。
 
-北极熊（polarbears）虽然长得胖嘟嘟的，但跑得极快，游泳也游得快。美国（人）俗称“山（汤）姆叔叔”（UncleSam，爸爸在去年9月20日信上跟你提过），英国（人）俗称“约翰牛”（JohnBull），苏联俗称thebear，指的就是北极熊。
+北极熊（polar bears）虽然长得胖嘟嘟的，但跑得极快，游泳也游得快。美国（人）俗称“山（汤）姆叔叔”（Uncle Sam，爸爸在去年 9 月 20 日信上跟你提过），英国（人）俗称“约翰牛”（John Bull），苏联俗称 ​the bear，指的就是北极熊。
 
 提到牛和熊，在英文中另有相对的组意思：
+bull 是哄抬物价、股票，有中文中“买空”的意思；
+bear 是抛卖，使物价、股票下跌，有中文中“卖空”的意思。
 
-bull是哄抬物价、股票，有中文中“买空”的意思；
-
-bear是抛卖，使物价、股票下跌，有中文中“卖空”的意思。
-
-熊和做生意还有一句谚语Selltheskinbeforeonehaskilledthebear.（熊没到手先卖皮）。正式说法是Neversellthebear'sskinuntilyouhavekilledthebear.（没宰到熊以前你先别卖熊皮）。
+熊和做生意还有一句谚语 ​Sell the skin before one has killed the bear.​（熊没到手先卖皮）。正式说法是 ​Never sell the bear's skin until you have killed the bear.​（没宰到熊以前你先别卖熊皮）。
 
 你可以比较比较另外一句：
+Count one's chickens before they are hatched.​（蛋没孵出前先算多少鸡。）
+这就表示不稳健了（稳健的意思看爸爸给你 1 月 12 日的信），所以人该宰到熊后再卖皮，孵出蛋后再算鸡。
 
-Countone'schickensbeforetheyarehatched.（蛋没孵出前先算多少鸡。）
+中文中有一个“罴”（pí）字，就是褐色的熊（brown bear），“熊罴入梦”的意思是：“祝你生个儿子！”（May you bear a son!）如果六姑肚子大了，你就可以这样祝贺她。bear 的动词有生小孩的意思，所以这句话要硬翻成英文则是 ​May you bear a “he-bear”​，外国人就不懂了。六姑如果也不清楚“熊罴入梦”的典故，也会发脾气，说：“小文你什么意思！六姑是人，怎么你倒盼她生个以熊！”
 
-这就表示不稳健了（稳健的意思看爸爸给你1月12日的信），所以人该宰到熊后再卖皮，孵出蛋后再算鸡。
+中文的“狗熊”就是指黑熊，“耍狗熊”是马戏中表演熊的演出（give a bear show），但也有耍无赖的意思。
 
-中文中有一个“罴”（pi）字，就是褐色的熊（brownbear），“熊罴入梦”的意思是：“祝你生个儿子！”（Mayyoubearason!）如果六姑肚子大了，你就可以这样祝贺她。bear的动词有生小孩的意思，所以这句话要硬翻成英文则是Mayyoubeara“he-bear””，外国人就不懂了。六姑如果也不清楚“熊罴入梦”的典故，也会发脾气，说：“小文你什么意思！六姑是人，怎么你倒盼她生个以熊！”
+爸爸 1974 年 3 月 7 日
 
-中文的“狗熊”就是指黑熊，“耍狗熊”是马戏中表演熊的演出（giveabearshow），但也有耍无赖的意思。
-
-爸爸1974年3月7日
-
-你和姥姥上月21日的信昨天收到。你的英文进步真快，真不得了！
-
+你和姥姥上月 21 日的信昨天收到。你的英文进步真快，真不得了！
 八舅在年节一共寄了多少钱？请姥姥开给爸爸。
 
 ## 二二、为什么还叫别人是姥姥？
