--- a/08.书信函件类/坐牢家爸爸给女儿的八十封信.md
+++ b/08.书信函件类/坐牢家爸爸给女儿的八十封信.md
@@ -668,17 +668,16 @@ It has nothing to do with me.​（“这不关我的事”，“干我屁事”
 
 其实他远赶不上苍蝇，苍蝇眼中一个变成四千个，所以还是苍蝇的老婆最多。
 
-动物中跟身体比例，眼睛最大的要算蜻蜓（苍蝇叫fly或housefly，蜻蜓叫dragonfly），蜻蜓眼力最好，可以看到十八英尺远的一只小蚊子（gnat），gnat在英文中表示眼睛看到的小东西（1.anyofvarioussmall,tow-wingedinsectsorflies.Mostgnatsareblood-suckingandmakebitesthatitch.2.British.amosquito.3.strainatagnat,toobjecttosomesmallorverytriflingthing.4.gnat-catcher,anyofvarioussmall,insect-eatingAmericanbirds.）。
+动物中跟身体比例，眼睛最大的要算蜻蜓（苍蝇叫 ​fly 或 ​housefly，蜻蜓叫 ​dragonfly），蜻蜓眼力最好，可以看到十八英尺远的一只小蚊子（gnat），​gnat 在英文中表示眼睛看到的小东西（1. any of various small, tow-winged insects or flies. Most gnats are blood-sucking and make bites that itch. 2. British. a mosquito. 3. strain at a gnat, to object to some small or very trifling thing. 4. gnat-catcher, any of various small, insect-eating American birds.）。
 
-tostrainatagnatandswallowacamel（吞一只骆驼）表示只看到小事，大事反看不到。
+to strain at a gnat and swallow a camel​（吞一只骆驼）表示只看到小事，大事反看不到。
+He is just the chap to strain at a gnat and swallow a camel.​（他就是那种小事精明大事糊涂的家伙。）
 
-Heisjustthechaptostrainatagnatandswallowacamel.（他就是那种小事精明大事糊涂的家伙。）
+中文中有“见秋毫之末而不见舆薪”（看到一根小毛的尖但看不到一车木柴），也正是这意思。去年 10 月 7 日爸爸给你信中写的 ​penny-wise and pound-foolish 你还记得吗？也是这一类的意思，你要把那封信找出来看看。爸爸给你的信，你有的看不懂没关系，但你常常看，或在（四姑家）姊姊哥哥休息时向他们请教，就会慢慢全懂了。
 
-中文中有“见秋毫之末而不见舆薪”（看到一根小毛的尖但看不到一车木柴），也正是这意思。去年10月7日爸爸给你信中写的penny-wiseandpound-foolish你还记得吗？也是这一类的意思，你要把那封信找出来看看。爸爸给你的信，你有的看不懂没关系，但你常常看，或在（四姑家）姊姊哥哥休息时向他们请教，就会慢慢全懂了。
+爸爸 1974 年 3 月 27 日
 
-爸爸1974年3月27日
-
-你和姥姥7日信20日收到。本周要写长信给八舅，故只写给你。
+你和姥姥 7 日信 20 日收到。本周要写长信给八舅，故只写给你。
 
 ## 二四、英文回文，中文回文
 
