--- a/08.书信函件类/坐牢家爸爸给女儿的八十封信.md
+++ b/08.书信函件类/坐牢家爸爸给女儿的八十封信.md
@@ -733,39 +733,33 @@ Able was I ere I saw Elba.
 
 亲爱的小文：
 
-爸爸去年8月12日给你的信上谈长颈鹿，你还记得吗？人也有长颈的，亚洲有一个国家叫缅甸（Burma），缅甸有一个地方，女人的脖子上套重的（heavy）黄铜（brass）项圈（collars），有的套到二十一圈（卷coils），要重到五十多磅（atotalweightof50poundsormore）！这种女人，我们可以叫做
+爸爸去年 8 月 12 日给你的信上谈长颈鹿，你还记得吗？人也有长颈的，亚洲有一个国家叫缅甸（Burma），缅甸有一个地方，女人的脖子上套重的（heavy）黄铜（brass）项圈（collars），有的套到二十一圈（卷 ​coils），要重到五十多磅（a total weight of 50 pounds or more）！这种女人，我们可以叫做：
 
-giraffe-neckedwomen
-
+giraffe-necked women
 长颈鹿脖子的女人（们）
 
-这真是一个怪风俗，但比起中国人缠小脚来（tobindthefeet，也叫footbinding，foot是单数，但并不是只缠一只脚），也不过是“班门弄斧”呢！这也可以说是“小巫见大巫”。
+这真是一个怪风俗，但比起中国人缠小脚来（to bind the feet，也叫 ​foot binding，​foot 是单数，但并不是只缠一只脚），也不过是“班门弄斧”呢！这也可以说是“小巫见大巫”。
 
-脖子的英文叫neck，中国文言文中叫“颈”“项”，但白话中也用，跟脖子有关的一些字，如
+脖子的英文叫 ​neck，中国文言文中叫“颈”“项”，但白话中也用，跟脖子有关的一些字，如：
 
-长颈鹿：不能说长脖子鹿
+- 长颈鹿：不能说长脖子鹿
+- 项链：不能说脖子链，英文是 ​necklace
+- 领带：不能说脖子带，英文是 ​necktie
+- 围巾：不能说脖子巾，但可以叫“围脖儿”，英文是 ​scarf 或 ​muffler
 
-项链：不能说脖子链，英文是necklace
-
-领带：不能说脖子带，英文是necktie
-
-围巾：不能说脖子巾，但可以叫“围脖儿”，英文是scarf或muffler
-
-赛跑或赛马的时候，跑得一般快，就叫neckandneck（脖子和脖子），如果只比别人（或别的马）跑快一点点而赢了，就叫winbyaneck（以一脖之差赢了，就是赢了一个脖子）（险胜），如果这样输了就叫losebyaneck（以一脖之差输了，就是输了一个脖子）。所以，小文呀，你要记得，千万别跟长颈鹿赛跑。
-
+赛跑或赛马的时候，跑得一般快，就叫 ​neck and neck​（脖子和脖子）。如果只比别人（或别的马）跑快一点点而赢了，就叫 ​win by a neck​（以一脖之差赢了，就是赢了一个脖子）（险胜）。如果这样输了就叫 ​lose by a neck​（以一脖之差输了，就是输了一个脖子）。所以，小文呀，你要记得，千万别跟长颈鹿赛跑。
 但可以跟长颈鹿比赛谁吃的东西先到胃里。
 
-Neckornothing是冒险干一下、拼命干一下。打捧球偷垒时，你自己就可以同自己说：
+Neck or nothing 是冒险干一下、拼命干一下。打棒球偷垒时，你自己就可以同自己说：
+I'll try it, neck or nothing.​（我要拼命试一下。）
 
-I'lltryit,neckornothing.（我要拼命试一下。）
+看了上面七行的意思，好像脖子老是跟冒险有关系，老是在紧要关头。​save one's neck 是本来要绞死但不绞了，就是“救了他的脖子”，更有险的意思了（中文是“幸免一死”的意思）。
 
-看了上面七行的意思，好像脖子老是跟冒险有关系，老是在紧要关头。saveone'sneck是本来要绞死但不绞了，就是“救了他的脖子”，更有险的意思了（中文是“幸免一死”的意思）。
+同样的还有一句 ​stick (one's) neck out，也是冒险的意思（to take a risk）。如你劝人“Don't stick your neck out too far”，就是劝人别太冒险。
 
-同样的还有一句stick（one's）neckout，也是冒险的意思（totakearisk）。如你劝人“Don'tstickyourneckouttoofar”，就是劝人别太冒险。
+中国人说最要好的朋友是“刎颈之交”。“刎”是拿刀切脖子，“刎”字别写成“吻”字，因为若写错了，写成“吻颈”，就变成英文 ​necking 的意思了。
 
-中国人说最要好的朋友是“刎颈之交”。“刎”是拿刀切脖子，“刎”字别写成“吻”字，因为若写错了，写成“吻颈”，就变成英文necking的意思了。
-
-爸爸1974年4月6日
+爸爸 1974 年 4 月 6 日
 
 ## 二六、眼睛有时候会上当
 
