--- a/08.书信函件类/坐牢家爸爸给女儿的八十封信.md
+++ b/08.书信函件类/坐牢家爸爸给女儿的八十封信.md
@@ -765,48 +765,36 @@ I'll try it, neck or nothing.​（我要拼命试一下。）
 
 亲爱的小文：
 
-关于“看”的英文字，有好几个，look是普通的一个。
+关于“看”的英文字，有好几个，​look 是普通的一个。
 
-Whatareyoulookingat?你在看什么？
+What are you looking at? 你在看什么？
+I looked but saw nothing. 我看了，但什么也没看见。
 
-Ilookedbutsawnothing.我看了，但什么也没看见。
+小文你看，除了 ​look 外，又出来一个看的字 ​see​（过去式是 ​saw），有一个字很好玩，叫 ​seesaw，就是小朋友玩的跷跷板。
 
-小文你看，除了look外，又出来一个看的字see（过去式是saw），有一个字很好玩，叫seesaw，就是小朋友玩的跷跷板。
+和中文“看”“瞧”“瞄”等字一样，英文中这一类字的用法也都是固定的，所以你要直接学，注意什么时候该用 ​look，什么时候该用 ​see，什么时候该用别的字。
 
-和中文“看”“瞧”“瞄”等字一样，英文中这一类字的用法也都是固定的，所以你要直接学，注意什么时候该用look，什么时候该用see，什么时候该用别的字。
-
-Lookbeforeyourleap.在你跳以前先看一看，就是中文“三思而后行”的意思。
-
-Lookforaneedleinahaystack.在干草堆里找针，就是中文“海底捞针”的意思（表示白费劲，徒劳无益）。
-
-Lookers-onseemostofthegame.
-
+Look before your leap. 在你跳以前先看一看，就是中文“三思而后行”的意思。
+Look for a needle in a haystack. 在干草堆里找针，就是中文“海底捞针”的意思（表示白费劲，徒劳无益）。
+Lookers-on see most of the game.
 在旁边看的看到最多的游戏
-
 就是中文“旁观者清”（看得清楚）的意思。
 
-《伊索寓言》说一个狮子听到青蛙叫（hearingthefrogcroaking），以为一定是个大得不得了的动物，后来脚踩（tramp）到青蛙，才知道原来这么小，这个寓言引出一句英文：
-
-Don'tbeafraidofathingyouhearuntilyouhaveseenit.
-
+《伊索寓言》说一个狮子听到青蛙叫（hearing the frog croaking），以为一定是个大得不得了的动物，后来脚踩（tramp）到青蛙，才知道原来这么小，这个寓言引出一句英文：
+Don't be afraid of a thing you hear until you have seen it.
 别怕一件东西你听到的除非你已经看到它。
 
-这个意思就是看了才相信，英文是Seeingisbelieving，也是中文俗语“百闻不如一见”的意思。
-
+这个意思就是看了才相信，英文是 ​Seeing is believing，也是中文俗语“百闻不如一见”的意思。
 但是全靠亲眼看见，有时候也不一定可靠，因为眼睛有时候会上当。人在沙漠中常常看到“海市蜃楼”（mirage），也就是幻觉、错觉。
-
-Travelersonthedesertmayseeamirageofpalmtreesandwater.
-
+Travelers on the desert may see a mirage of palm trees and water.
 旅行者在沙漠可能看到棕榈树和水的幻觉。
 
-看电影是seeamovie，看电视是watchTV，盯着看是stare（过去式是stared）。
+看电影是 ​see a movie，看电视是 ​watch TV，盯着看是 ​stare​（过去式是 ​stared）。
+The little girl stared at the toys in the window.
 
-Thelittlegirlstaredatthetoysinthewindow.
+爸爸 1974 年 4 月 13 日
 
-爸爸1974年4月13日
-
-你3月27日的信爸爸本月11号收到，你剪的画片和说明都非常好。
-
+你 3 月 27 日的信爸爸本月 11 号收到，你剪的画片和说明都非常好。
 小文你说两条线除箭头外哪条长？下边的？不对，其实两条一样长，这就是说，眼睛有时候会上当。（一条是两边箭头朝外，一条是两边箭头朝内。）
 
 ## 二七、“妈妈骑马，马慢，妈妈骂马”
