--- a/08.书信函件类/坐牢家爸爸给女儿的八十封信.md
+++ b/08.书信函件类/坐牢家爸爸给女儿的八十封信.md
@@ -804,54 +804,40 @@ The little girl stared at the toys in the window.
 你会说“绕口令”吗？
 
 你快说：“妈妈骑马，马慢，妈妈骂马。”
-
 你快说：“妞妞骑牛，牛扭，妞妞扭牛。”
-
 你快说：“门后头的刀，刀倒挂着。”
-
 你快说：“吃葡萄不吐葡萄皮，不吃葡萄倒吐葡萄皮。”
 
-这些好玩的句子，就叫绕口令，绕口令不但中文有，英文也有，英文绕口令叫tonguetwister（就是舌头打转儿的意思），也叫tongue-tripper。
+这些好玩的句子，就叫绕口令，绕口令不但中文有，英文也有，英文绕口令叫 ​tongue twister​（就是舌头打转儿的意思），也叫 ​tongue-tripper。
 
-你快说Shesellsseashellsatthesea-shore.
-
+你快说：
+She sells sea shells at the sea-shore.
 她卖贝壳在海边。
 
-你快说Abigblackbugbitesabigblackbear.
-
+你快说：
+A big black bug bites a big black bear.
 大大黑臭虫大咬大大黑熊熊。
 
-英文中不但有绕口令的话，还有绕口令的诗，这叫tongue-twistinglyrics。
+英文中不但有绕口令的话，还有绕口令的诗，这叫 ​tongue-twistingly lyrics。
 
 你快说下面这四句：
-
-PeterPiperpickedapeckofpickledpeppers；
-
-ApeckofpickledpeppersPeterPiperpicked；
-
-IfPeterPiperpickedapeckofpickledpeppers.
-
-Where'sthepeckofpickledpeppersPeterPiperpicked？
-
-apeckofpickledpeppers
-
+Peter Piper picked a peck of pickled peppers;
+A peck of pickled peppers Peter Piper picked;
+If Peter Piper picked a peck of pickled peppers.
+Where's the peck of pickled peppers Peter Piper picked？
+a peck of pickled peppers
 很多腌胡椒（辣椒）
 
 写到这儿，爸爸又想到一段长一点的英文绕口令：
+Bill had a billboard and also a board bill, but the board bill bored Bill, so he sold the billboard to pay the board bill.
+billboard 是广告牌，​Bill 是人名，​bill 是账单，​bore 是烦人，过去式是 ​bored。
+He bored me.​（他真烦人。）
+He bored me to death.​（他烦死我了。）
 
-Billhadabillboardandalsoaboardbill,buttheboardbillboredBill,sohesoldthebillboardtopaytheboardbill.
-
-billboard是广告牌，Bill是人名，bill是账单，bore是烦人，过去式是bored。
-
-Heboredme.（他真烦人。）
-
-Heboredmetodeath.（他烦死我了。）
-
-爸爸1974年4月19日
+爸爸 1974 年 4 月 19 日
 
 “一粒辣椒也比一篮南瓜好”，意思是重质不重量。
-
-Betteronegrainofpepperthanabasketfulofpumpkins.
+Better one grain of pepper than a basketful of pumpkins.
 
 ## 二八、老鼠不信任一个洞
 
