--- a/08.书信函件类/坐牢家爸爸给女儿的八十封信.md
+++ b/08.书信函件类/坐牢家爸爸给女儿的八十封信.md
@@ -841,23 +841,24 @@ Better one grain of pepper than a basketful of pumpkins.
 
 ## 二八、老鼠不信任一个洞
 
+
 亲爱的小文：
 
-老鼠的英文叫mouse，多数是mice，另一种比较大一点的叫rat，多数是rats，老鼠有好几百种。老鼠的胃口很好，人吃什么，它就吃什么，它还吃人不吃的，浆糊、肥皂，它都吃。老鼠的繁殖很快，一只母老鼠，不到一个月就可以生一窝，一窝有四到七只小老鼠，小老鼠中母的，四十五天就可以长大做妈妈了。
+老鼠的英文叫 mouse，多数是 mice，另一种比较大一点的叫 rat，多数是 rats，老鼠有好几百种。老鼠的胃口很好，人吃什么，它就吃什么，它还吃人不吃的，浆糊、肥皂，它都吃。老鼠的繁殖很快，一只母老鼠，不到一个月就可以生一窝，一窝有四到七只小老鼠，小老鼠中母的，四十五天就可以长大做妈妈了。
 
 老鼠可以活六年。老鼠会游泳，但不喜欢水。
 
-老鼠喜欢偷东西，老鼠眼就叫贼眼（thievisheyes），中文中骂人“獐头鼠目”“贼眉鼠眼”。人恨老鼠又偷东西又乱咬东西，所以一看到就要打它，中文俗话叫“耗子过街，人人喊打”。人一打老鼠就逃，叫“鼠窜”，若形容逃跑的人，就叫“抱头鼠窜”（runawaylikerats）。
+老鼠喜欢偷东西，老鼠眼就叫贼眼（thievish eyes），中文中骂人“獐头鼠目”“贼眉鼠眼”。人恨老鼠又偷东西又乱咬东西，所以一看到就要打它，中文俗话叫“耗子过街，人人喊打”。人一打老鼠就逃，叫“鼠窜”，若形容逃跑的人，就叫“抱头鼠窜”（run away like rats）。
 
-老鼠胆子很小，所以中文说“胆小如鼠”，但英文却说“胆小如鸡”（chicken或chickenhearted）。但中文说“落汤鸡”，英文却说：“湿得像淹在水里的老鼠”（wetasadrownedrat）。——你鼠我就鸡，你鸡我就鼠，英文老是跟中文别扭。如果你在雨中淋得湿淋淋的回来，你就可以说：
+老鼠胆子很小，所以中文说“胆小如鼠”，但英文却说“胆小如鸡”（chicken 或 chickenhearted）。但中文说“落汤鸡”，英文却说：“湿得像淹在水里的老鼠”（wet as a drowned rat）。——你鼠我就鸡，你鸡我就鼠，英文老是跟中文别扭。如果你在雨中淋得湿淋淋的回来，你就可以说：
 
-Itrainedcatsanddogsand,look,Iamwetasadrownedrat.（雨下得好大呀，看呀，我变成落汤鸡了。）
+It rained cats and dogs and, look, I am wet as a drowned rat.（雨下得好大呀，看呀，我变成落汤鸡了。）
 
-英文中说人穷，就说“穷得像教堂的老鼠”（aspoorasachurchmouse）。
+英文中说人穷，就说“穷得像教堂的老鼠”（as poor as a church mouse）。
 
 英文还有一句
 
-Amousedoesn'ttrusttoonehole.
+A mouse doesn't trust to one hole.
 
 （一个）老鼠不信任一个洞。
 
@@ -865,43 +866,45 @@ Amousedoesn'ttrusttoonehole.
 
 传说船要沉了或房子要塌了或着火了以前，船里或房里的老鼠就先跑了。英文是：
 
-Theratsleavingasinkingship.
+The rats leaving a sinking ship.
 
 老鼠离开一条要沉的船。
 
-Whenabuildingisabouttofalldown,allthemicedesertit.
+When a building is about to fall down, all the mice desert it.
 
 当一栋建筑物快要倒了，所有老鼠都离弃它。
 
-由这个现象，变出来另一种意义，就是患难时候不可靠的家伙，就叫rat。这种人出卖别人，最可恶。跟这个字很近的一个字叫Judas（犹大），就是出卖他老师耶稣的。别人给犹大三十块钱（当时这数目可买一个奴隶slave），他后来很后悔，于是钱也不要了，吊死在树上，这树就叫“犹大树”（Judastree，就是植物学上的“洋苏木”）。别人收买犹大，因为他们认不出谁是耶稣，犹大说你们看我吻谁谁就是，于是他给了耶稣一个kiss，这种吻，就叫“犹大之吻”（Judaskiss）。就是表面上很亲热，骨子里却有阴谋的吻。美国黑社会头子要干掉谁，有时候就来一个Judaskiss，所以谁都怕这种kiss。爸爸信上跟你谈过的天才王尔德，有诗写人总杀掉他心爱的东西，但
 
-Thecowarddoesitwithakiss，胆小的用一个吻
 
-Thebravemanwithasword！胆大的用一把剑
+由这个现象，变出来另一种意义，就是患难时候不可靠的家伙，就叫 rat。这种人出卖别人，最可恶。跟这个字很近的一个字叫 Judas（犹大），就是出卖他老师耶稣的。别人给犹大三十块钱（当时这数目可买一个奴隶 slave），他后来很后悔，于是钱也不要了，吊死在树上，这树就叫「犹大树」（Judas tree，就是植物学上的「洋苏木」）。别人收买犹大，因为他们认不出谁是耶稣，犹大说你们看我吻谁谁就是，于是他给了耶稣一个 kiss，这种吻，就叫「犹大之吻」（Judas kiss）。就是表面上很亲热，骨子里却有阴谋的吻。美国黑社会头子要干掉谁，有时候就来一个 Judas kiss，所以谁都怕这种 kiss。爸爸信上跟你谈过的天才王尔德，有诗写人总杀掉他心爱的东西，但
+
+The coward does it with a kiss，胆小的用一个吻
+
+The brave man with a sword！胆大的用一把剑
 
 就是用的犹大吻耶稣的典故。
 
-Rat虽然出卖人，但也有自己完蛋的时候，英文中
+Rat 虽然出卖人，但也有自己完蛋的时候，英文中
 
-PournotwateronadrowningMouse.
+Pour not water on a drowning Mouse.
 
-就是劝人“别往淹了水的老鼠身上浇水”，也是中文“别打落水狗”的意思。但人好像总喜欢打落水狗，这些谚语很多
+就是劝人「别往淹了水的老鼠身上浇水」，也是中文「别打落水狗」的意思。但人好像总喜欢打落水狗，这些谚语很多
 
 ①落井下石
 
-②Everyonepushesafallingfence.（人人都推快倒的篱笆，就是中文“墙倒众人推”的意思。）
+②Everyone pushes a falling fence.（人人都推快倒的篱笆，就是中文「墙倒众人推」的意思。）
 
-③Whentheoxfalls,theysharpentheirknives.（当牛倒了，他们都去磨快他们的刀。）
+③When the ox falls, they sharpen their knives.（当牛倒了，他们都去磨快他们的刀。）
 
-④Whenthetreeisfallen,allgowiththeirhatchet.（当树被弄倒了，所有的人都拿斧头来。）
+④When the tree is fallen, all go with their hatchet.（当树被弄倒了，所有的人都拿斧头来。）
 
-⑤Kickamanwhenhe'sdown.（当他垮的时候踢他。）
+⑤Kick a man when he's down.（当他垮的时候踢他。）
 
 爸爸常说英文要一窝一窝的学，上面这些，就是一窝一窝的学的例子。
 
-爸爸1974年4月26日
+爸爸 1974 年 4 月 26 日
 
-本周只给你写信。你11、17日的信和卡片同于今天收到。传说中大寿星玛士撒拉（Methuselah）活了969岁，亚当（Adam）活了930岁，他们两个老头儿岁数相减的零头是39岁。爸爸昨天一个人静静的过39岁生日，一天之内，看了一本传记，又看了一个剧本。
+本周只给你写信。你 11、17 日的信和卡片同于今天收到。传说中大寿星 Methuselah 活了 969 岁，Adam 活了 930 岁，他们两个老头儿岁数相减的零头是 39 岁。爸爸昨天一个人静静的过 39 岁生日，一天之内，看了一本传记，又看了一个剧本。
 
 ## 二九、说姓道名
 
