--- a/08.书信函件类/坐牢家爸爸给女儿的八十封信.md
+++ b/08.书信函件类/坐牢家爸爸给女儿的八十封信.md
@@ -908,39 +908,39 @@ Pour not water on a drowning Mouse.
 
 ## 二九、说姓道名
 
-亲爱的小文：
+親愛的小文：
 
-前天收到你8号的信，你的名字叫Hedy，姥姥说Hidy，大概是姥姥起的。
+前天收到你8號的信，你的名字叫Hedy，姥姥說Hidy，大概是姥姥起的。
 
-英文中name指“姓”也指“名”也指“姓名”，所以HedyLee中，Hedy是name，Lee也是name，HedyLee也是name。
+英文中name指「姓」也指「名」也指「姓名」，所以Hedy Lee中，Hedy是name，Lee也是name，Hedy Lee也是name。
 
-中国习惯“姓”放前面，但英文“姓”放后面，比如美国南北战争时候，一个有名的将军就叫
+中國習慣「姓」放前面，但英文「姓」放後面，比如美國南北戰爭時候，一個有名的將軍就叫
 
-RobertEdwardLee
+Robert Edward Lee
 
-第一个叫firstname，是“名”不是“姓”，也叫givenname，也叫Christianname（教名，这在英国最普通），中间的叫secondname或middlename，最后一个才是“姓”，也叫surname或familyname，或lastname。Lee跟我们同“姓”。
+第一個叫first name，是「名」不是「姓」，也叫given name，也叫Christian name（教名，這在英國最普通），中間的叫second name或middle name，最後一個才是「姓」，也叫surname或family name，或last name。Lee跟我們同「姓」。
 
-一般美国人都有三个名字（就是两个“名”加一个“姓”），头一个和中间一个（就是前两个），是他自己的名字（Personalnames），因为名字是自己的，所以可以简写，所以上面的李将军，就可简写成RobertE.Lee或R.E.Lee，不但简写，还可以另用小名，例如美国现在总统叫
+一般美國人都有三個名字（就是兩個「名」加一個「姓」），頭一個和中間一個（就是前兩個），是他自己的名字（Personal names），因為名字是自己的，所以可以簡寫，所以上面的李將軍，就可簡寫成Robert E. Lee或R. E. Lee，不但簡寫，還可以另用小名，例如美國現在總統叫
 
-RichardMilhousNixon
+Richard Milhous Nixon
 
 Richard的小名就叫Dick，他的老婆叫
 
-ThelmaPatriciaRyan
+Thelma Patricia Ryan
 
 Patricia的小名就叫Pat。
 
 你的名字Hedy，小名是Heddie或Hedie。
 
-女人结婚以后，就把丈夫的姓名搬来，前面加上Mrs.就可以了。但美国女人用她自己的名字时候也很多，得诺贝尔奖的文学家赛珍珠，本名是
+女人結婚以後，就把丈夫的姓名搬來，前面加上Mrs.就可以了。但美國女人用她自己的名字時候也很多，得諾貝爾獎的文學家賽珍珠，本名是
 
-PearlComfortSydenstricker
+Pearl Comfort Sydenstricker
 
-Pearl意思是“珍珠”，Sydenstricker这个姓太啰嗦，就翻成第一个字的音“赛”。她嫁给了在中国金陵大学教书的JohnLossingBuck以后，名字就变成
+Pearl意思是「珍珠」，Sydenstricker這個姓太囉嗦，就翻成第一個字的音「賽」。她嫁給了在中國金陵大學教書的John Lossing Buck以後，名字就變成
 
-PearlSydenstrickerBuck
+Pearl Sydenstricker Buck
 
-1931年她印出小说叫《大地》（TheGoodEarth），就用上面这名字。1935年她离婚，1938年得诺贝尔文学奖，虽然她又和出版商RichardJ.Walsh结婚，但因为用PearlS.Buck的名字太出名了，所以也没改。可见人分开比名字分开容易得多。
+1931年她印出小說叫《大地》（The Good Earth），就用上面這名字。1935年她離婚，1938年得諾貝爾文學獎，雖然她又和出版商Richard J. Walsh結婚，但因為用Pearl S. Buck的名字太出名了，所以也沒改。可見人分開比名字分開容易得多。
 
 爸爸1974年5月25日
 
