--- a/08.书信函件类/坐牢家爸爸给女儿的八十封信.md
+++ b/08.书信函件类/坐牢家爸爸给女儿的八十封信.md
@@ -950,35 +950,35 @@ Pearl Sydenstricker Buck
 
 如果一个地方，有一种东西，已经很多了，而你还运那种东西到那个地方去，在英文中，叫
 
-CarrycoalstoNewcastle．
+Carry coals to Newcastle．
 
 运煤到新堡
 
-英国Newcastle地方煤很多，你再运煤去，就是多此一举。现在让我们造一句：“送茶到中国就无异运煤到新堡”，英文就是：
+英国 Newcastle 地方煤很多，你再运煤去，就是多此一举。现在让我们造一句："送茶到中国就无异运煤到新堡"，英文就是：
 
-TosendteatoChinawouldbecarryingcoalstoNewcastle.
+To send tea to China would be carrying coals to Newcastle.
 
 英文中还有表示这种白费劲，徒劳无功的事的成语：
 
-Carrywatertotheriver.（运水到河里。就是中文“江边卖水”的意思）
+Carry water to the river.（运水到河里。就是中文"江边卖水"的意思）
 
-CarryowlstoAthens.（运猫头鹰到雅典。）
+Carry owls to Athens.（运猫头鹰到雅典。）
 
-雅典是希腊（Greece）国的首都，猫头鹰很多，古时候智慧女神叫Athena，雅典的名字Athens就是跟她来的，猫头鹰传说是跟着智慧女神的，所以就借了光，变成了“智慧的象征”（asymbolofwisdom），其实在鸟中，鹅和乌鸦都比它聪明。
+雅典是希腊（Greece）国的首都，猫头鹰很多，古时候智慧女神叫 Athena，雅典的名字 Athens 就是跟她来的，猫头鹰传说是跟着智慧女神的，所以就借了光，变成了"智慧的象征"（a symbol of wisdom），其实在鸟中，鹅和乌鸦都比它聪明。
 
 猫头鹰为什么跟在智慧女神的屁股后面？大概它的一对大眼睛被智慧女神看中，认为有股聪明样的缘故。大部分的鸟，眼睛都长在头两边，不能同时看到同一件东西，但猫头鹰的眼睛却像人一样，能同时看到同一件东西。但猫头鹰的眼睛是呆呆的，眼珠不会动，不会飞眼，所以看东西得摇头晃脑才行。女人飞眼，男人就来了；女猫头鹰用摇头代飞眼，男猫头鹰就飞了。这就是女人比女猫头鹰厉害的地方。
 
-猫头鹰在中国古称“枭”，也叫“号鸟”，俗话叫“夜猫子”，中国人喜欢养鸟的，没人养它，养它就是怪人了，北京有一种“歇后语”（就是话只说前一半，后面一半歇一歇再说或跟本不说的），也算是谜语的一种，有一句是：
+猫头鹰在中国古称"枭"，也叫"号鸟"，俗话叫"夜猫子"，中国人喜欢养鸟的，没人养它，养就是怪人了，北京有一种"歇后语"（就是话只说前一半，后面一半歇一歇再说或跟本不说的），也算是谜语的一种，有一句是：
 
 武大郎玩夜猫子——什么人玩什么鸟
 
 不论中国外国，人们迷信的，都不喜欢夜猫子，夜猫子的声音像狗叫，迷信的人认为不吉祥。
 
-一个人长得很严肃，也叫owl，做夜工的、夜生活者、夜游子、熬夜的人，也叫owl，纽约半夜三更还演的电影，在俗话中叫owlshow。
+一个人长得很严肃，也叫 owl，做夜工的、夜生活者、夜游子、熬夜的人，也叫 owl，纽约半夜三更还演的电影，在俗话中叫 owl show。
 
 夜猫子很会做窝。
 
-爸爸1974年5月31日
+爸爸 1974 年 5 月 31 日
 
 ## 三一、狼来了！狼来了！
 
