--- a/08.书信函件类/坐牢家爸爸给女儿的八十封信.md
+++ b/08.书信函件类/坐牢家爸爸给女儿的八十封信.md
@@ -984,27 +984,27 @@ Carry owls to Athens.（运猫头鹰到雅典。）
 
 亲爱的小文：
 
-六十多年前，美国有一个文学家叫杰克伦敦（JackLondon），他的姓，跟英国的首都完全一样。他曾写过一部小说，叫《野性的呼声》（TheCalloftheWild），这书是他33岁（1903）出版的，里头写一条狗，是爸爸1973年6月17日信上跟你提过的圣伯纳（SaintBernard）种和别的种的混血，又壮又聪明，它的主人被印地安人杀了，它替主人报了仇，然后跟狼做了朋友。每年一次，它总要回到它的主人死的地方，哀呼一阵——这个故事，说明了狗在许多方面，都比人够意思。
+六十多年前，美国有一个文学家叫杰克伦敦（Jack London），他的姓，跟英国的首都完全一样。他曾写过一部小说，叫《野性的呼声》（The Call of the Wild），这书是他33岁（1903）出版的，里头写一条狗，是爸爸1973年6月17日信上跟你提过的圣伯纳（Saint Bernard）种和别的种的混血，又壮又聪明，它的主人被印地安人杀了，它替主人报了仇，然后跟狼做了朋友。每年一次，它总要回到它的主人死的地方，哀呼一阵——这个故事，说明了狗在许多方面，都比人够意思。
 
-狼狗虽然很凶，但比起狼来，还比不上。狼有白的、灰的、褐的、黑的。重一百磅。狼狗只重六十至八十磅，名叫德国牧羊犬（Germanshepherddog），就是“警犬”或“军犬”（Policedog），母的狼狗比较驯良，可用来给瞎子带路（asaguidedog）。
+狼狗虽然很凶，但比起狼来，还比不上。狼有白的、灰的、褐的、黑的。重一百磅。狼狗只重六十至八十磅，名叫德国牧羊犬（German shepherd dog），就是"警犬"或"军犬"（Police dog），母的狼狗比较驯良，可用来给瞎子带路（as a guide dog）。
 
-关于狼的成语，中国外国都有很多，你请姥姥给你讲“狼狈为奸”“狼狈得很”（狼狈不堪）“狼子野心”“狼心狗肺”“狼吞虎咽”（和英文wolfdown正巧意思一样，但英文wolf当动词用）“鬼哭狼号”“声名狼藉”“杯盘狼藉”“狼戾不仁”“狼烟四起”。
+关于狼的成语，中国外国都有很多，你请姥姥给你讲"狼狈为奸""狼狈得很"（狼狈不堪）"狼子野心""狼心狗肺""狼吞虎咽"（和英文wolf down正巧意思一样，但英文wolf当动词用）"鬼哭狼号""声名狼藉""杯盘狼藉""狼戾不仁""狼烟四起"。
 
-《伊索寓言》里有三十七个关于狼的故事，你可以自己看。其中最有名的是牧羊小孩骗人喊：“狼来了！”Thewolfiscoming!（这是合文法的句子，但狼真来了，只要喊Wolf！Wolf！就可以了。）后来狼真来了，他再喊也没人信了。这故事变成英文成语crywolf，现在让我们造一个句子：
+《伊索寓言》里有三十七个关于狼的故事，你可以自己看。其中最有名的是牧羊小孩骗人喊："狼来了！"The wolf is coming!（这是合文法的句子，但狼真来了，只要喊Wolf! Wolf!就可以了。）后来狼真来了，他再喊也没人信了。这故事变成英文成语cry wolf，现在让我们造一个句子：
 
-Isshereallysickorisshejustcryingwolf？
+Is she really sick or is she just crying wolf？
 
-意思是她真病了呢，还是她只不过是发假警报？crywolf就是giveafalsealarm。crywolftoooften以后，说真话也没人信了。Thisisthepunishmentofaliar：Heisnotbelieved,evenwhenhespeaksthetruth.（说谎话的惩罚是：即使他说真话时候，人家也不信他。）中文有“江山易改，本性难移”的话，英文有“狼可能丢了它们的牙，但丢不了它们的本性”Wolvesmaylosetheirteeth,butnottheirnature.。
+意思是她真病了呢，还是她只不过是发假警报？cry wolf就是give a false alarm。cry wolf too often以后，说真话也没人信了。This is the punishment of a liar：He is not believed, even when he speaks the truth.（说谎话的惩罚是：即使他说真话时候，人家也不信他。）中文有"江山易改，本性难移"的话，英文有"狼可能丢了它们的牙，但丢不了它们的本性"Wolves may lose their teeth, but not their nature.。
 
-在杰克伦敦以前的美国文学家奥尔科特（LouisaM.Alcott），写过名著《小妇人》（LittleWomen），她说她写书的目的是Keepthewolffromthedoor。有一个笑话，老师问学生：WhatdoyouthinkMissAlcottmeantbysayingshewastryingtokeepthewolffromthedoor？（你想奥尔科特女士说她设法不让狼进门是怎么回事？）一个学生答道：Isupposeshejustdidn'twanttheguysbotheringher.（我想她不过不要男人打扰她罢了。）这为什么是笑话呢？因为Keepthewolffromthedoor的意思并不是“不让狼进门”而是“免得挨饿”。wolf在美国俗语中有“色狼”的意思，那个学生以为wolf是指“色狼”，所以把整个意思给弄拧了。
+在杰克伦敦以前的美国文学家奥尔科特（Louisa M. Alcott），写过名著《小妇人》（Little Women），她说她写书的目的是Keep the wolf from the door。有一个笑话，老师问学生：What do you think Miss Alcott meant by saying she was trying to keep the wolf from the door？（你想奥尔科特女士说她设法不让狼进门是怎么回事？）一个学生答道：I suppose she just didn't want the guys bothering her.（我想她不过不要男人打扰她罢了。）这为什么是笑话呢？因为Keep the wolf from the door的意思并不是"不让狼进门"而是"免得挨饿"。wolf在美国俗语中有"色狼"的意思，那个学生以为wolf是指"色狼"，所以把整个意思给弄拧了。
 
-Wolf既是色狼，wolfwhistle，就是色狼的啸，男孩子向女孩子吹口啸（哨），就是wolfwhistle。
+Wolf既是色狼，wolf whistle，就是色狼的啸，男孩子向女孩子吹口啸（哨），就是wolf whistle。
 
-狼的耳朵是立起来的，并且很小。英文中有“抓狼耳朵”的意思，很像中文的“狼狈不堪”，也像“骑虎难下”。
+狼的耳朵是立起来的，并且很小。英文中有"抓狼耳朵"的意思，很像中文的"狼狈不堪"，也像"骑虎难下"。
 
-It'slikeholdingawolfbytheears,badtoholdon,butworsetoletgo.（就像抓住了狼耳朵，抓住固然糟，放了更糟。）
+It's like holding a wolf by the ears, bad to hold on, but worse to let go.（就像抓住了狼耳朵，抓住固然糟，放了更糟。）
 
-固然糟是因为耳朵小，不好抓；更糟是因为放了狼又会咬人。worse是bad的比较级。Hegoesfrombadtoworse.（他每况愈下。）“每况愈下”也写做“每下愈况”，是文言，白话的意思是“一天不如一天”“王小二过年——一年不好一年”。
+固然糟是因为耳朵小，不好抓；更糟是因为放了狼又会咬人。worse是bad的比较级。He goes from bad to worse.（他每况愈下。）"每况愈下"也写做"每下愈况"，是文言，白话的意思是"一天不如一天""王小二过年——一年不好一年"。
 
 爸爸1974年6月7日
 
