--- a/08.书信函件类/坐牢家爸爸给女儿的八十封信.md
+++ b/08.书信函件类/坐牢家爸爸给女儿的八十封信.md
@@ -1014,25 +1014,25 @@ It's like holding a wolf by the ears, bad to hold on, but worse to let go.（就
 
 亲爱的小文：
 
-去年11月4日爸爸信上跟你提过的“蛋头”（egghead）你还记得吗？蛋头就是——书呆子（bookworm），这种人把伊丽莎白泰勒叫做李察波顿夫人（onewhocallsElizabethTaylorMrs.RichardBurton），是非常“迂”的，迂就是unrealistic。
+去年11月4日爸爸信上跟你提过的“蛋头”（egg head）你还记得吗？蛋头就是——书呆子（bookworm），这种人把伊丽莎白·泰勒叫做李察·波顿夫人（one who calls Elizabeth Taylor Mrs. Richard Burton），是非常“迂”的，迂就是unrealistic。
 
-蛋在中国文言里叫卵，鸡蛋就叫鸡卵，鸭蛋就叫鸭卵，但王八蛋并不叫王八卵，可以叫王八羔子，相当与英文的S.O.B.。混蛋也不能叫混卵，但可以叫混帐，相当于英文nuts。二次大战时美国将军McAuliffe被围，德国指挥官要他投降，他的回信非常简单：
+蛋在中国文言里叫卵，鸡蛋就叫鸡卵，鸭蛋就叫鸭卵，但王八蛋并不叫王八卵，可以叫王八羔子，相当于英文的S.O.B.。混蛋也不能叫混卵，但可以叫混帐，相当于英文nuts。二次大战时美国将军McAuliffe被围，德国指挥官要他投降，他的回信非常简单：
 
-TotheGermanCommander：（德国指挥官：）
+To the German Commander：（德国指挥官：）
 
 Nuts!（混蛋！去你妈的蛋！）
 
-TheAmericanCommander（美军指挥官）
+The American Commander（美军指挥官）
 
-中文有成语“覆巢之下，安有完卵”，翻译成英文该是Whenthenestfalls,therearemowholeeggs。中文还有成语“以卵击石”，英文和它相当的是：
+中文有成语“覆巢之下，安有完卵”，翻译成英文该是When the nest falls, there are no whole eggs。中文还有成语“以卵击石”，英文和它相当的是：
 
-Ifthestonefallsonthepot,woetothepot；（石头掉锅上，锅完蛋；）
+If the stone falls on the pot, woe to the pot；（石头掉锅上，锅完蛋；）
 
-Ifthepotfallsonthestone,woetothepot.（锅掉石头上，锅完蛋。）
+If the pot falls on the stone, woe to the pot.（锅掉石头上，锅完蛋。）
 
 还有一句：
 
-Whethertheknifefallonthemelonorthemelonontheknife,themelonsuffers.
+Whether the knife falls on the melon or the melon on the knife, the melon suffers.
 
 爸爸把这句翻成绕口令：
 
@@ -1040,19 +1040,16 @@ Whethertheknifefallonthemelonorthemelonontheknife,themelonsuffers.
 
 有一个故事说，一个少女头上顶了一篮蛋，走在路上，盘算着蛋生鸡，鸡生蛋，蛋又生鸡，鸡又生蛋，蛋再生鸡，鸡再生蛋。……愈算愈多，发了大财。突然一不小心，篮子掉了下来，蛋都碎了。所以英文有成语劝人要稳健：
 
-Don'tventureallyoureggsinonebasket.（别冒险把你所有的蛋放在一个篮子里。）
+Don't venture all your eggs in one basket.（别冒险把你所有的蛋放在一个篮子里。）
 
-你在小朋友的书上，会看到一位“蛋先生”叫HumptyDumpty，有一首儿歌就是写他的
+你在小朋友的书上，会看到一位“蛋先生”叫Humpty Dumpty，有一首儿歌就是写他的
 
-HUMPTYDUMPTY
+HUMPTY DUMPTY
 
-“HumptyDumptysatonawall；
-
-HumptyDumptyhadagreatfall；
-
-Notalltheking'shorsesnoralltheking'smen
-
-CouldsetHumptyDumptyupagain.”
+"Humpty Dumpty sat on a wall；
+Humpty Dumpty had a great fall；
+Not all the king's horses nor all the king's men
+Could set Humpty Dumpty up again."
 
 爸爸1974年6月14日
 
