--- a/08.书信函件类/坐牢家爸爸给女儿的八十封信.md
+++ b/08.书信函件类/坐牢家爸爸给女儿的八十封信.md
@@ -1069,37 +1069,37 @@ Could set Humpty Dumpty up again."
 
 亲爱的小文：
 
-英文money是钱；monkey是猴；monkery是和尚（生活）。
+英文 money 是钱；monkey 是猴；monkery 是和尚（生活）。
 
-中国寓言里说一个养猴子的人叫“狙公”，向猴子们说，我早上给四个果子，晚上给三个，猴子们都生气；狙公说，那么我早上给三个，晚上给四个好不好？猴子们没学会算术，就高兴了。后来变成“朝三暮四”的成语。
+中国寓言里说一个养猴子的人叫"狙公"，向猴子们说，我早上给四个果子，晚上给三个，猴子们都生气；狙公说，那么我早上给三个，晚上给四个好不好？猴子们没学会算术，就高兴了。后来变成"朝三暮四"的成语。
 
-猴子有二百多种，中文里有“猢狲”、“猕猴”、“狙”、“猱”等称呼。请姥姥给你解释“猴快”、“猴精”、“猴急”、“耍猴子”。
+猴子有二百多种，中文里有"猢狲"、"猕猴"、"狙"、"猱"等称呼。请姥姥给你解释"猴快"、"猴精"、"猴急"、"耍猴子"。
 
-所有的猴子都会爬树。既然会爬，若还教它如何爬，在中文成语就叫“教猱升木”，翻成英文就是teachmonkeystoclimbatree，意思就是鼓励坏人做坏事（encouragewickedpeopletodowickedthings）。
+所有的猴子都会爬树。既然会爬，若还教它如何爬，在中文成语就叫"教猱升木"，翻成英文就是 teach monkeys to climb a tree，意思就是鼓励坏人做坏事（encourage wicked people to do wicked things）。
 
-猴子最小的一种只有老鼠那么大，但最大的一种叫狒狒（baboon），公的重到九十磅，凶得要命，脸长得像狗，所以叫狗脸猴（doglikeface或thedog-facedmonkey）。
+猴子最小的一种只有老鼠那么大，但最大的一种叫狒狒（baboon），公的重到九十磅，凶得要命，脸长得像狗，所以叫狗脸猴（dog like face 或 the dog-faced monkey）。
 
-猴子的腮有小空间，可以藏吃的（Theycancarryfoodinpouchesinsidetheircheeks.）。中国的名小说《西游记》（英文译本有四种，其中一种就叫Monkey）写孙悟空（猴子成精）偷了仙丹，就藏在腮里，炼丹的太上老君急了，抓住它，它就吐了出来，并且骂太上老君小家子相。
+猴子的腮有小空间，可以藏吃的（They can carry food in pouches inside their cheeks.）。中国的名小说《西游记》（英文译本有四种，其中一种就叫 Monkey）写孙悟空（猴子成精）偷了仙丹，就藏在腮里，炼丹的太上老君急了，抓住它，它就吐了出来，并且骂太上老君小家子相。
 
 猴子的性格，在很多英文句子里可以感觉出来，大概凡是狡猾、顽皮、嘲弄、恶作剧、捣乱、胡闹、打扰、搅人等等，都和它有关：
 
-Heisastrickeryasamonkey.（他狡猾像猴子。）
+He is as trickery as a monkey.（他狡猾像猴子。）
 
-Youlittlemonkey！（你这顽皮的小孩！）
+You little monkey！（你这顽皮的小孩！）
 
-Allright,boys,nomonkeybusinessnow.（好啦，孩子们，别再淘了[现在要做点正经的了]。）
+All right, boys, no monkey business now.（好啦，孩子们，别再淘了[现在要做点正经的了]。）
 
-Shemadeamonkey（out）ofhiminfrontofallhisfriends.（她在他朋友面前，当众给他出丑。）
+She made a monkey（out）of him in front of all his friends.（她在他朋友面前，当众给他出丑。）
 
-Hethrewamonkeywrenchintoourplans.（他破坏我们的计划。）monkeywrench是活口扳子（活动扳钳），是用来修机器的，但不用来修，反倒把它丢进（throwinto）机器里，机器就不能动了，就是捣乱了。
+He threw a monkey wrench into our plans.（他破坏我们的计划。）monkey wrench 是活口扳子（活动扳钳），是用来修机器的，但不用来修，反倒把它丢进（throw into）机器里，机器就不能动了，就是捣乱了。
 
-Don'tmonkeywiththebuzzsaw！（圆锯可不是闹着玩的！[太危险了，不可掉以轻心！]）
+Don't monkey with the buzz saw！（圆锯可不是闹着玩的！[太危险了，不可掉以轻心！]）
 
-艾森豪威尔（IKE）当将军，打了胜仗。另一场仗本来要换别人来领导，但富兰克林罗斯福总统怕打扰一群正在赢的队伍（dangeroustomonkeywithawinningteam），所以还是让艾森豪威尔继续指挥了。
+艾森豪威尔（IKE）当将军，打了胜仗。另一场仗本来要换别人来领导，但富兰克林罗斯福总统怕打扰一群正在赢的队伍（dangerous to monkey with a winning team），所以还是让艾森豪威尔继续指挥了。
 
 猴子是群居的，可以活二三十年。
 
-爸爸1974年6月23日
+爸爸 1974 年 6 月 23 日
 
 ## 三四、从人猿到猿人
 
