--- a/08.书信函件类/坐牢家爸爸给女儿的八十封信.md
+++ b/08.书信函件类/坐牢家爸爸给女儿的八十封信.md
@@ -1193,39 +1193,39 @@ He is one of the mushroom kind；he has suddenly sprung up out of nothing.（他
 
 亲爱的小文：
 
-美国Hader夫妇常给小朋友的书画插图，你看他们画的这张骑驴的画片，把这头小驴画得多可爱！驴叫ass，也叫donkey，用ass比较正式，在《圣经》（Bible）上、在动物学上，都用ass，两个字都用来叫“傻瓜”、“呆子”、“蠢蛋”，用donkey意思更深，有“呆得可爱”或“呆不可当”的味儿。
+美国 Hader 夫妇常给小朋友的书画插图，你看他们画的这张骑驴的画片，把这头小驴画得多可爱！驴叫 ass，也叫 donkey，用 ass 比较正式，在《圣经》（Bible）上、在动物学上，都用 ass，两个字都用来叫「傻瓜」、「呆子」、「蠢蛋」，用 donkey 意思更深，有「呆得可爱」或「呆不可当」的味儿。
 
-中国成语上“骑驴觅驴”是lookingfordonkeyondonkeyback，意思是在驴背上找驴，忘了自己在于什么了，是“心不在焉”的意思（absent-minded）。
+中国成语上「骑驴觅驴」是 looking for donkey on donkey back，意思是在驴背上找驴，忘了自己在于什么了，是「心不在焉」的意思（absent-minded）。
 
-但中文“骑马找马”就另一种意思了，指先找个位置再找更好的。
+但中文「骑马找马」就另一种意思了，指先找个位置再找更好的。
 
-如果老师问问题，学生答得跟问题不相干，就是“答非所问”，也就是“驴唇不对马嘴”。这只是中文的特殊用法，英文没有。
+如果老师问问题，学生答得跟问题不相干，就是「答非所问」，也就是「驴唇不对马嘴」。这只是中文的特殊用法，英文没有。
 
-中文有“驴年马月”的话，因为十二生肖中没有驴，所以“驴年”就是永远不会有的日子（impossibledate,sincethereisno“donkeyyear”），就是atimethatwillnevercome，英文俗语中的驴年是另外一种意思：
+中文有「驴年马月」的话，因为十二生肖中没有驴，所以「驴年」就是永远不会有的日子（impossible date, since there is no "donkey year"），就是 a time that will never come，英文俗语中的驴年是另外一种意思：
 
-donkey'syears是averylongtime
+donkey's years 是 a very long time
 
-这是从donkey和ears两个字变出来的，y+ears就是years。
+这是从 donkey 和 ears 两个字变出来的，y + ears 就是 years。
 
-驴比马可以吃得坏而活干得多，但如果主人对它没弄对劲，它就耍“驴脾气”或“驴性子”，就是很“拧”（stubborn），当然也有笨、傻、呆、蠢等意思在内：
+驴比马可以吃得坏而活干得多，但如果主人对它没弄对劲，它就耍「驴脾气」或「驴性子」，就是很「拧」（stubborn），当然也有笨、傻、呆、蠢等意思在内：
 
-Hehasmadeanassofhimself．（他做傻事而弄出笑话来。）
+He has made an ass of himself．（他做傻事而弄出笑话来。）
 
-Yousillyass！（你这笨蛋！）
+You silly ass！（你这笨蛋！）
 
-Asstubbornasamule.（像骡子一样倔，像骡子一样顽固。）
+As stubborn as a mule.（像骡子一样倔，像骡子一样顽固。）
 
-“骡子”mule是jackass（maledonkey公驴）和mare（femalehorse母马）生的，也能吃苦耐劳（但骡子不能生骡子），脾气跟它们老子一样（有乃父风），是“非驴非马”的动物，“非驴非马”是什么都不像（unlikeanything），就是“四不像”。
+「骡子」mule 是 jackass（male donkey 公驴）和 mare（female horse 母马）生的，也能吃苦耐劳（但骡子不能生骡子），脾气跟它们老子一样（有乃父风），是「非驴非马」的动物，「非驴非马」是什么都不像（unlike anything），就是「四不像」。
 
-“駃騠”hinny是stallion（malehorse公马）和jenny（femaleass母驴）生的，却是个又小又弱的废物。
+「駃騠」 hinny 是 stallion（male horse 公马）和 jenny（female ass 母驴）生的，却是个又小又弱的废物。
 
-中国魏晋时候古人喜欢学驴叫（bray），但英文却有“Ifadonkeybrayatyou,don’tbrayathim．”（驴朝你叫，你别向它叫）的话。
+中国魏晋时候古人喜欢学驴叫（bray），但英文却有「If a donkey bray at you, don’t bray at him．」（驴朝你叫，你别向它叫）的话。
 
 美国漫画上的驴是指民主党，象是指共和党。
 
-爸爸1974年7月21日
+爸爸 1974 年 7 月 21 日
 
-你3日的信16日收到。
+你 3 日的信 16 日收到。
 
 ## 三七、骑小马-回台湾
 
