--- a/08.书信函件类/坐牢家爸爸给女儿的八十封信.md
+++ b/08.书信函件类/坐牢家爸爸给女儿的八十封信.md
@@ -1229,53 +1229,51 @@ As stubborn as a mule.（像骡子一样倔，像骡子一样顽固。）
 
 ## 三七、骑小马-回台湾
 
-骑小马
-
 亲爱的小文：
 
-你在纽约骑的那种马，叫ShetlandPony，Shetland是英国最北面的一百多个小岛的总称，加在一起有551平方英里（台湾的二十五分之一），这个地方产的这种小马，是所有马里最小的一种，长得结实，吃得少，最适合小朋友骑。
+你在纽约骑的那种马，叫 Shetland Pony，Shetland 是英国最北面的一百多个小岛的总称，加在一起有 551 平方英里（台湾的二十五分之一），这个地方产的这种小马，是所有马里最小的一种，长得结实，吃得少，最适合小朋友骑。
 
 中文英文都有太多太多和马有关的故事和成语，爸爸写一些好玩的给你：
 
-一、拍马屁：英文是lickanother'sspittle（舐人口水，舐也就是舔）bootlick（舐人靴子）。
+一、拍马屁：英文是 lick another's spittle（舐人口水，舐也就是舔）boot lick（舐人靴子）。
 
-二、马屁精：lickspittle或bootlicker或apple-polisher。
+二、马屁精：lick spittle 或 boot licker 或 apple-polisher。
 
 三、露出马脚：阴谋或谎话泄漏。
 
-四、马路如虎口：Thestreetisasdangerousasatiger.
+四、马路如虎口：The street is as dangerous as a tiger.
 
-五、车水马龙：heavytrafficonstreet。
+五、车水马龙：heavy traffic on street。
 
 六、牛头马面：地狱里的鬼，专给阎王抓人的。
 
 七、盲人骑瞎马，夜半临深池：表示危险。
 
-八、马后炮：为时已晚的努力（belatedefforts），临去的多余的动作。
+八、马后炮：为时已晚的努力（belated efforts），临去的多余的动作。
 
-九、Ridethehighhorse（骑高头马）：趾高气扬。
+九、Ride the high horse（骑高头马）：趾高气扬。
 
-十、Rideone'shorsetodeath（把马骑死）：把得意事讲得太多惹人讨厌。
+十、Ride one's horse to death（把马骑死）：把得意事讲得太多惹人讨厌。
 
-十一、Payforadeadhorse（在死马身上花钱）：花冤枉钱。
+十一、Pay for a dead horse（在死马身上花钱）：花冤枉钱。
 
 但在中国古代，有国王叫人去买千里马，结果马死了，那人却花了很多钱，买了马骨头回来，国王问那人什么意思？那人说，消息传出去，人家听说你国王这样爱马——爱得连马骨头都要买，天下的好马就都送来给你买了，在好马中，一定有千里马。可见在死马身上花钱，有时也不冤枉。
 
-十二、Flogadeadhorse（鞭死马）：白费气力。
+十二、Flog a dead horse（鞭死马）：白费气力。
 
-十三、Putthecartbeforethehorse.（车放马前面）：本末倒置，前后颠倒。
+十三、Put the cart before the horse.（车放马前面）：本末倒置，前后颠倒。
 
-十四、Agoodhorsehasnoneedofthespur.（好马无须踢马刺）：骏马勿鞭。spur是靴上的踢马刺。
+十四、A good horse has no need of the spur.（好马无须踢马刺）：骏马勿鞭。spur 是靴上的踢马刺。
 
-十五、Fromthehorse'smouth（从马嘴里出来的）：表示可靠、可信的来源。Ihaveitstraightfromthehorse'smouth.我从马嘴里直接拿出来，表示绝对可靠（的消息）。
+十五、From the horse's mouth（从马嘴里出来的）：表示可靠、可信的来源。I have it straight from the horse's mouth. 我从马嘴里直接拿出来，表示绝对可靠（的消息）。
 
-爸爸1974年8月4日
+爸爸 1974 年 8 月 4 日
 
 回台湾
 
 亲爱的小文：
 
-姥姥7月12日信、你5月29日的照片卡片、6月18日的信，共三封，都在7月24日收到。由八舅转来妈妈给爸爸的信（6月24日及7月10日）也都收到。上周因你们已在返台途中，所以没写信。
+姥姥 7 月 12 日信、你 5 月 29 日的照片卡片、6 月 18 日的信，共三封，都在 7 月 24 日收到。由八舅转来妈妈给爸爸的信（6 月 24 日及 7 月 10 日）也都收到。上周因你们已在返台途中，所以没写信。
 
 看你和同学合照的相片，你也慢慢变成一个漂亮的大女孩了，妈妈来信也夸你懂事，爸爸很高兴。你年纪愈大，就会慢慢发现，任何地方都有它特殊的好处。在美国有许多在台湾没有的好处，在台湾也有许多在美国没有的好处，所以人要“随遇而安”，要在任何地方利用它特殊的好处来充实自己。你在台湾，有许多许多生活方式，其中有一些，可以特别指出的，像：
 
@@ -1303,7 +1301,7 @@ As stubborn as a mule.（像骡子一样倔，像骡子一样顽固。）
 
 十二、你要学会寄信的方法，必要时，可以直接写信给爸爸，直接由自己投进信筒。
 
-爸爸1974年8月4日
+爸爸 1974 年 8 月 4 日
 
 家里有很多儿童书，你和姥姥可找出来，放到你自己的图书馆里。
 
