--- a/08.书信函件类/坐牢家爸爸给女儿的八十封信.md
+++ b/08.书信函件类/坐牢家爸爸给女儿的八十封信.md
@@ -1307,29 +1307,29 @@ As stubborn as a mule.（像骡子一样倔，像骡子一样顽固。）
 
 ## 三八、鸽子-囮子-凯子
 
-亲爱的小文：
+亲爱的文：
 
-鸽子普通叫pigeon，文雅用法叫dove，小的鸽子也叫dove，共有290种。
+鸽子的普通叫法pigeon，文雅用法叫dove，小的鸽子也叫dove，共有290种。
 
-鸽子最会认家，不会迷路，所以古代人都用鸽子传消息，这种鸽子叫信鸽（carrierpigeon）。美国主战的人叫鹰派（TheHawks），反对战争的就叫鸽派，因为鸽子被用做和平的象征（asymbolofpeace），其实鸽子也很会打架。
+鸽子最会认家，不会迷路，所以古代人都用鸽子传消息，这种鸽子叫信鸽（carrier pigeon）。美国主战的人叫鹰派（The Hawks），反对战争的就叫鸽派，因为鸽子被用做和平的象征（a symbol of peace），其实鸽子也很会打架。
 
 你见过鸟喝水吗？鸟喝水，用嘴沾了水，再仰起头来，咽下去。可是鸽子却不这样，它的喝水方法和马一样，把嘴伸到水里去吸（sucking）。
 
-孵蛋由公的母的轮流，通常只孵两个蛋。公的白天孵，母的晚上孵。一共要孵十七天。小鸽子叫squabs，刚生下来又瞎又没毛，丑得要死。喂它们的是由公鸽母鸽嘴里吐出来的一种鸽子奶（pigeon'smilk）。
+孵蛋由公的母的轮流，通常只孵两个蛋。公的白天孵，母的晚上孵。一共要孵十七天。小鸽子叫squabs，刚生下来又瞎又没毛，丑得要死。喂它们的是由公鸽母鸽嘴里吐出来的一种鸽子奶（pigeon's milk）。
 
-在美国俗话中，pigeon用来指女孩子，也用来指赌钱时候那被骗输钱的傻瓜（中文叫“凯子”）。
+在美国俗话中，pigeon用来指女孩子，也用来指赌钱时候那被骗输钱的傻瓜（中文叫"凯子"）。
 
-用一只鸽子骗别的鸽子来，这只鸽子叫stool-pigeon，中文叫“鸟媒”或“囮鸠”、“囮鸽”。stool的意思是板凳，把这只鸽子绑在stool上以引诱别的鸽子，所以叫stool-pigeon，不然它也许反倒跟别的鸽子跑了。
+用一只鸽子骗别的鸽子来，这只鸽子叫stool-pigeon，中文叫"鸟媒"或"囮鸠"、"囮鸽"。stool的意思是板凳，把这只鸽子绑在stool上以引诱别的鸽子，所以叫stool-pigeon，不然它也许反倒跟别的鸽子跑了。
 
-英文中decoy这个字也是这种意思，但比stool-pigeon用得宽，可以用来指“饵兽”，也可用来指人，还可当动词来用，像
+英文中decoy这个字也是这种意思，但比stool-pigeon用得宽，可以用来指"饵兽"，也可用来指人，还可当动词来用，像
 
-Hehadbeendecoyedacrossthefrontierandarrestedasaspy.（他被引诱越过边界然后给当作间谍抓起来了。）
+He had been decoyed across the frontier and arrested as a spy.（他被引诱越过边界然后给当作间谍抓起来了。）
 
-“饵”是bait，把蚯蚓放在鱼钩上就叫饵（baitahookwithaworm），捕鼠机（mousetrap）上的肉皮也叫饵，有饵的地方就有陷阱（trap）、就有圈套。
+"饵"是bait，把蚯蚓放在鱼钩上就叫饵（bait a hook with a worm），捕鼠机（mousetrap）上的肉皮也叫饵，有饵的地方就有陷阱（trap）、就有圈套。
 
-Pigeon-English也叫Pidgin-English，就是洋泾浜英文，洋泾浜是上海附近的一个地方，最早跟英国人做生意的中国人，说英文说不好，自己用中文的意思造出不通的英文，就叫洋泾浜英文。比如说“人山人海”该是英文的hugecrowds，但说成people-mountain-people-sea，就是笑话了，这就是洋泾浜英文。
+Pigeon-English也叫Pidgin-English，就是洋泾浜英文，洋泾浜是上海附近的一个地方，最早跟英国人做生意的中国人，说英文说不好，自己用中文的意思造出不通的英文，就叫洋泾浜英文。比如说"人山人海"该是英文的huge crowds，但说成people-mountain-people-sea，就是笑话了，这就是洋泾浜英文。
 
-爸爸1974年8月10日
+爸爸 1974年8月10日
 
 姥姥7月25日信8月7日收到。
 
